[gd_scene load_steps=16 format=3 uid="uid://bb6hv48hppt78"]

[ext_resource type="Script" path="res://scripts/gameplay-ui.gd" id="1_nibp3"]
[ext_resource type="Texture2D" uid="uid://bwlfd3aa8q3w6" path="res://ui_images/border_trim.png" id="2_ceahc"]
[ext_resource type="PackedScene" uid="uid://ngu1bkvclntg" path="res://scenes/LaughterModule.tscn" id="2_i56to"]
[ext_resource type="Texture2D" uid="uid://bhiaf4y2m05aa" path="res://ui_images/table_with_module_open.png" id="3_cna1x"]
[ext_resource type="Texture2D" uid="uid://bwrt333tfcmlq" path="res://ui_images/blank_ui.png" id="4_0clmj"]
[ext_resource type="Texture2D" uid="uid://bchs5t42givn3" path="res://ui_images/blank_white.png" id="5_btbry"]

[sub_resource type="SystemFont" id="SystemFont_g6nxb"]

[sub_resource type="LabelSettings" id="LabelSettings_n36ei"]
font = SubResource("SystemFont_g6nxb")
font_size = 35

[sub_resource type="LabelSettings" id="LabelSettings_1vrp3"]
font = SubResource("SystemFont_g6nxb")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_xvs7j"]
font = SubResource("SystemFont_g6nxb")
font_size = 60

[sub_resource type="LabelSettings" id="LabelSettings_xqlj8"]
font = SubResource("SystemFont_g6nxb")
font_size = 60

[sub_resource type="LabelSettings" id="LabelSettings_xx25p"]
font = SubResource("SystemFont_g6nxb")
font_size = 60

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pumu3"]
border_color = Color(0.764706, 0.823529, 0.145098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uw3th"]
bg_color = Color(0.905882, 0.254902, 0.290196, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hw4ma"]
size = Vector2(108.617, 93.6227)

[node name="main_game_scene_zach" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_nibp3")

[node name="laughter_module" parent="." instance=ExtResource("2_i56to")]
unique_name_in_owner = true

[node name="panel_frame" type="NinePatchRect" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00104167
anchor_top = 0.0037037
anchor_right = 1.0
anchor_bottom = 0.993519
texture = ExtResource("2_ceahc")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
metadata/_edit_use_anchors_ = true

[node name="panel_modifiers" type="NinePatchRect" parent="panel_frame"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00966255
anchor_top = 0.0200454
anchor_right = 0.506169
anchor_bottom = 0.501136
offset_right = 6.10352e-05
texture = ExtResource("2_ceahc")
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="panel_frame/panel_modifiers"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0209644
anchor_top = 0.0617284
anchor_right = 0.979036
anchor_bottom = 0.938272
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="label_modifiers" type="Label" parent="panel_frame/panel_modifiers/VBoxContainer"]
layout_mode = 2
text = "Available Items"
label_settings = SubResource("LabelSettings_n36ei")

[node name="item_list" type="ItemList" parent="panel_frame/panel_modifiers/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
max_columns = 4
same_column_width = true

[node name="panel_object" type="NinePatchRect" parent="panel_frame"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00966255
anchor_top = 0.513163
anchor_right = 0.506169
anchor_bottom = 0.787117
offset_right = 6.10352e-05
texture = ExtResource("2_ceahc")
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="panel_frame/panel_object"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="label_object" type="Label" parent="panel_frame/panel_object/VBoxContainer"]
layout_mode = 2
text = "Active Items"
label_settings = SubResource("LabelSettings_n36ei")

[node name="active_item_list" type="ItemList" parent="panel_frame/panel_object/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32
max_columns = 4
same_column_width = true

[node name="panel_object_description" type="NinePatchRect" parent="panel_frame"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00988554
anchor_top = 0.797942
anchor_right = 0.506764
anchor_bottom = 0.981291
offset_right = -6.10352e-05
texture = ExtResource("2_ceahc")
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48
metadata/_edit_use_anchors_ = true

[node name="label_object_description" type="Label" parent="panel_frame/panel_object_description"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0305654
anchor_top = 0.0747041
anchor_right = 0.46512
anchor_bottom = 0.426745
grow_horizontal = 2
grow_vertical = 2
text = "Description"
label_settings = SubResource("LabelSettings_n36ei")
metadata/_edit_use_anchors_ = true

[node name="text_description" type="RichTextLabel" parent="panel_frame/panel_object_description"]
layout_mode = 0
anchor_left = 0.0335079
anchor_top = 0.326531
anchor_right = 0.973822
anchor_bottom = 0.897959
theme_override_font_sizes/normal_font_size = 28
text = "Evil monkey. They steal bananas fast, and have a high voice."
metadata/_edit_use_anchors_ = true

[node name="panel_target" type="NinePatchRect" parent="panel_frame"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.510926
anchor_top = 0.02058
anchor_right = 0.989074
anchor_bottom = 0.282507
texture = ExtResource("2_ceahc")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
metadata/_edit_use_anchors_ = true

[node name="label_target" type="Label" parent="panel_frame/panel_target"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0355484
anchor_top = 0.0696583
anchor_right = 0.176719
anchor_bottom = 0.214969
grow_horizontal = 2
grow_vertical = 2
text = "Target"
label_settings = SubResource("LabelSettings_n36ei")
metadata/_edit_use_anchors_ = true

[node name="label_pitch" type="Label" parent="panel_frame/panel_target"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0347934
anchor_top = 0.242056
anchor_right = 0.193144
anchor_bottom = 0.444611
offset_left = 24.262
offset_top = 8.95999
offset_right = -24.262
offset_bottom = -8.95999
grow_horizontal = 2
grow_vertical = 2
text = "Pitch"
label_settings = SubResource("LabelSettings_1vrp3")
metadata/_edit_use_anchors_ = true

[node name="label_pitch_value" type="Label" parent="panel_frame/panel_target"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.113709
anchor_top = 0.453167
anchor_right = 0.166458
anchor_bottom = 0.811278
offset_top = 22.96
offset_bottom = -22.96
grow_horizontal = 2
grow_vertical = 2
text = "3
"
label_settings = SubResource("LabelSettings_xvs7j")
metadata/_edit_use_anchors_ = true

[node name="label_speed" type="Label" parent="panel_frame/panel_target"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.375381
anchor_top = 0.239278
anchor_right = 0.579433
anchor_bottom = 0.441833
offset_left = 34.762
offset_top = 8.95999
offset_right = -34.762
offset_bottom = -8.95998
grow_horizontal = 2
grow_vertical = 2
text = "Speed"
label_settings = SubResource("LabelSettings_1vrp3")
metadata/_edit_use_anchors_ = true

[node name="label_speed_value" type="Label" parent="panel_frame/panel_target"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.451033
anchor_top = 0.472611
anchor_right = 0.503781
anchor_bottom = 0.830722
offset_top = 22.96
offset_right = -1.52588e-05
offset_bottom = -22.96
grow_horizontal = 2
grow_vertical = 2
text = "3
"
label_settings = SubResource("LabelSettings_xqlj8")
metadata/_edit_use_anchors_ = true

[node name="label_volume" type="Label" parent="panel_frame/panel_target"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.79105
anchor_top = 0.264278
anchor_right = 0.892817
anchor_bottom = 0.466833
offset_left = 11.262
offset_top = 8.95999
offset_right = -11.262
offset_bottom = -8.95999
grow_horizontal = 2
grow_vertical = 2
text = "Vol."
label_settings = SubResource("LabelSettings_1vrp3")
metadata/_edit_use_anchors_ = true

[node name="label_volume_value" type="Label" parent="panel_frame/panel_target"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.815559
anchor_top = 0.497611
anchor_right = 0.868308
anchor_bottom = 0.855722
offset_top = 22.96
offset_bottom = -22.96
grow_horizontal = 2
grow_vertical = 2
text = "3
"
label_settings = SubResource("LabelSettings_xx25p")
metadata/_edit_use_anchors_ = true

[node name="panel_laugh_module" type="NinePatchRect" parent="panel_frame"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.511967
anchor_top = 0.28812
anchor_right = 0.989074
anchor_bottom = 0.981291
texture = ExtResource("2_ceahc")
patch_margin_left = 48
patch_margin_top = 48
patch_margin_right = 48
patch_margin_bottom = 48
metadata/_edit_use_anchors_ = true

[node name="label_laugh_module" type="Label" parent="panel_frame/panel_laugh_module"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0334689
anchor_top = 0.0210843
anchor_right = 0.486032
anchor_bottom = 0.125
grow_horizontal = 2
grow_vertical = 2
text = "Laughter Module"
label_settings = SubResource("LabelSettings_n36ei")
metadata/_edit_use_anchors_ = true

[node name="label_robot" type="Label" parent="panel_frame/panel_laugh_module"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.503817
anchor_top = 0.0316265
anchor_right = 0.956379
anchor_bottom = 0.135542
grow_horizontal = 2
grow_vertical = 2
text = "Robot
"
label_settings = SubResource("LabelSettings_n36ei")
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="button_launch" type="Button" parent="panel_frame/panel_laugh_module"]
layout_mode = 0
anchor_left = 0.089422
anchor_top = 0.596386
anchor_right = 0.299891
anchor_bottom = 0.725904
theme_override_colors/font_color = Color(0.945098, 0.960784, 0, 1)
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_pumu3")
theme_override_styles/hover = SubResource("StyleBoxFlat_uw3th")
text = "Launch"
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="panel_frame/panel_laugh_module"]
layout_mode = 0
anchor_left = 0.0697928
anchor_top = 0.161145
anchor_right = 0.317339
anchor_bottom = 0.503012
texture = ExtResource("3_cna1x")
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="panel_frame/panel_laugh_module/TextureRect"]
position = Vector2(177, 256)
scale = Vector2(2.73438, 2.73438)

[node name="CollisionShape2D" type="CollisionShape2D" parent="panel_frame/panel_laugh_module/TextureRect/Area2D"]
position = Vector2(-22.8571, -51.5656)
shape = SubResource("RectangleShape2D_hw4ma")

[node name="texture_rect_robot" type="TextureRect" parent="panel_frame/panel_laugh_module"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.657579
anchor_top = 0.118976
anchor_right = 0.896401
anchor_bottom = 0.448795
texture = ExtResource("4_0clmj")
metadata/_edit_use_anchors_ = true

[node name="text_robot" type="RichTextLabel" parent="panel_frame/panel_laugh_module"]
layout_mode = 0
anchor_left = 0.400218
anchor_top = 0.563253
anchor_right = 0.966194
anchor_bottom = 0.954819
offset_top = 3.05176e-05
theme_override_font_sizes/normal_font_size = 28
text = "I want to be an evil robot that is fast with a deep voice "
metadata/_edit_use_anchors_ = true

[node name="separator" type="TextureRect" parent="panel_frame/panel_laugh_module"]
layout_mode = 0
anchor_left = 0.363141
anchor_top = 0.149096
anchor_right = 0.374046
anchor_bottom = 0.879518
texture = ExtResource("5_btbry")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[connection signal="item_clicked" from="panel_frame/panel_modifiers/VBoxContainer/item_list" to="." method="_on_item_list_item_clicked"]
[connection signal="item_clicked" from="panel_frame/panel_object/VBoxContainer/active_item_list" to="." method="_on_item_list_item_clicked"]
